# manage-detached-processes

./: .gitignore  README.md  demo-process.py  pyproject.toml
src/: end-process.py  process.py  start-process.py  stop-process.py
